applications/goatcounter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goatcounter
spec:
  selector:
    app: goatcounter
  ports:
    - port: 8080
      targetPort: 8080
      name: http
